# internal/handler/grpc/handler.go
@@ -16,15 +16,32 @@ const (
 
 type Handler struct {
 	go_load.UnimplementedGoLoadServiceServer
-	accountLogic logic.Account
+	accountLogic      logic.Account
+	downloadTaskLogic logic.DownloadTask
 }
 
 func NewHandler(
 	accountLogic logic.Account,
+	downloadTaskLogic logic.DownloadTask,
 ) go_load.GoLoadServiceServer {
 	return Handler{
-		accountLogic: accountLogic,
+		accountLogic:      accountLogic,
+		downloadTaskLogic: downloadTaskLogic,
 	}
+}
+
+func (h Handler) getAuthTokenMetadata(ctx context.Context) string {
+	md, ok := metadata.FromIncomingContext(ctx)
+	if !ok {
+		return ""
+	}
+
+	metadataValues := md.Get(AuthTokenMetadataName)
+	if len(metadataValues) == 0 {
+		return ""
+	}
+
+	return metadataValues[0]
 }
 
 func (h Handler) CreateAccount(
@@ -63,5 +80,24 @@ func (h Handler) CreateSession(
 
 	return &go_load.CreateSessionResponse{
 		Account: output.Account,
+	}, nil
+}
+
+func (h Handler) CreateDownloadTask(
+	ctx context.Context,
+	request *go_load.CreateDownloadTaskRequest,
+) (*go_load.CreateDownloadTaskResponse, error) {
+	output, err := h.downloadTaskLogic.CreateDownloadTask(ctx, logic.CreateDownloadTaskParams{
+		Token:        h.getAuthTokenMetadata(ctx),
+		URL:          request.Url,
+		DownloadType: request.DownloadType,
+	})
+
+	if err != nil {
+		return nil, err
+	}
+
+	return &go_load.CreateDownloadTaskResponse{
+		DownloadTask: output.DownloadTask,
 	}, nil
 }
